--- a/Bukkit/AbstractImpl/Abstraction-v1_5_R3/pom.xml
+++ b/Bukkit/AbstractImpl/Abstraction-v1_5_R3/pom.xml
@@ -40,21 +40,27 @@
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-Bukkit-Abstraction</artifactId>
             <version>Bukkit-Abstraction</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-API</artifactId>
             <version>API</version>
+            <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
             <version>1.5.2-R1.0</version>
+            <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-Bukkit-v1_5_R2</artifactId>
             <version>Bukkit-v1_5_R2</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
