--- a/Bukkit/AbstractImpl/Abstraction-vPre/pom.xml
+++ b/Bukkit/AbstractImpl/Abstraction-vPre/pom.xml
@@ -40,16 +40,21 @@
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-Bukkit-Abstraction</artifactId>
             <version>Bukkit-Abstraction</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-API</artifactId>
             <version>API</version>
+            <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
             <version>1.4.2-R0.2</version>
+            <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
