--- a/Bukkit/AntiShare/pom.xml
+++ b/Bukkit/AntiShare/pom.xml
@@ -44,7 +44,7 @@
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-API</artifactId>
             <version>API</version>
-            <type>jar</type>
+            <scope>compile</scope>
         </dependency>
 
         <!-- Bukkit -->
@@ -53,6 +53,7 @@
             <artifactId>bukkit</artifactId>
             <version>1.4.5-R1.0</version>
             <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
 
         <!-- == START ANTISHARE ABSTRACTION == -->
@@ -62,84 +63,98 @@
             <artifactId>AntiShare-Bukkit-Abstraction</artifactId>
             <version>Bukkit-Abstraction</version>
             <type>jar</type>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-Bukkit-vPre</artifactId>
             <version>Bukkit-vPre</version>
             <type>jar</type>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-Bukkit-v1_4_5</artifactId>
             <version>Bukkit-v1_4_5</version>
             <type>jar</type>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-Bukkit-v1_4_6</artifactId>
             <version>Bukkit-v1_4_6</version>
             <type>jar</type>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-Bukkit-v1_4_R1</artifactId>
             <version>Bukkit-v1_4_R1</version>
             <type>jar</type>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-Bukkit-v1_5_R1</artifactId>
             <version>Bukkit-v1_5_R1</version>
             <type>jar</type>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-Bukkit-v1_5_R2</artifactId>
             <version>Bukkit-v1_5_R2</version>
             <type>jar</type>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-Bukkit-v1_5_R3</artifactId>
             <version>Bukkit-v1_5_R3</version>
             <type>jar</type>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-Bukkit-v1_6_R1</artifactId>
             <version>Bukkit-v1_6_R1</version>
             <type>jar</type>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-Bukkit-v1_6_R2</artifactId>
             <version>Bukkit-v1_6_R2</version>
             <type>jar</type>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-Bukkit-v1_6_R3</artifactId>
             <version>Bukkit-v1_6_R3</version>
             <type>jar</type>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-Bukkit-v1_7_R1</artifactId>
             <version>Bukkit-v1_7_R1</version>
             <type>jar</type>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-Bukkit-v1_7_R2</artifactId>
             <version>Bukkit-v1_7_R2</version>
             <type>jar</type>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-Bukkit-v1_7_R3</artifactId>
             <version>Bukkit-v1_7_R3</version>
             <type>jar</type>
+            <scope>compile</scope>
         </dependency>
 
         <!-- == END ANTISHARE ABSTRACTION == -->
