--- a/DevTools/BukkitPlugin/pom.xml
+++ b/DevTools/BukkitPlugin/pom.xml
@@ -44,14 +44,17 @@
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-Bukkit</artifactId>
             <version>5.5.3-SNAPSHOT</version>
-            <type>jar</type>
+            <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
 
         <!-- Bukkit -->
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.7.9-R0.1-SNAPSHOT</version>
+            <version>1.7.9-R0.2-SNAPSHOT</version>
+            <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
