--- a/Bukkit/AntiShare/pom.xml
+++ b/Bukkit/AntiShare/pom.xml
@@ -51,8 +51,7 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <!-- <version>1.4.5-R1.0</version> -->
-            <version>1.7.10-R0.1-SNAPSHOT</version>
+            <version>1.4.5-R1.0</version>
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
