--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 
     <modules>
         <module>AntiShare-API</module>
+        <module>Glowstone/AntiShare</module>
         <module>Bukkit/AntiShare</module>
         <module>Bukkit/Abstraction</module>
         <module>Bukkit/AbstractImpl/Abstraction-vPre</module>
