--- a/Sponge/AntiShare/pom.xml
+++ b/Sponge/AntiShare/pom.xml
@@ -27,35 +27,42 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.turt2live.antishare</groupId>
-    <artifactId>AntiShare</artifactId>
-    <name>AntiShare</name>
-    <version>5.5.3-SNAPSHOT</version> <!-- Don't forget to update Bukkit version & Bukkit Plugin dependency version -->
+    <artifactId>AntiShare-Sponge</artifactId>
+    <name>AntiShare-Sponge</name>
+    <version>5.5.3-SNAPSHOT</version>
+    <!-- Don't forget to update All-In-One version & Sponge Plugin dependency version in All-In-One -->
+    <!-- Also update the version in the main class -->
+
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!-- Used by replacement plugin to inject build number -->
+        <BUILD_NUMBER>local</BUILD_NUMBER>
     </properties>
 
     <dependencies>
-        <!-- This should not include the dev tools as it is also a plugin -->
-
-        <!-- Bukkit Plugin -->
+        <!-- AntiShare API -->
         <dependency>
             <groupId>com.turt2live.antishare</groupId>
-            <artifactId>AntiShare-Bukkit</artifactId>
-            <version>5.5.3-SNAPSHOT</version> <!-- Update when the Bukkit plugin updates -->
+            <artifactId>AntiShare-API</artifactId>
+            <version>API</version>
             <scope>compile</scope>
         </dependency>
 
-        <!-- Sponge Plugin -->
+        <!-- Sponge API -->
         <dependency>
-            <groupId>com.turt2live.antishare</groupId>
-            <artifactId>AntiShare-Sponge</artifactId>
-            <version>5.5.3-SNAPSHOT</version> <!-- Update when Sponge plugin updates -->
-            <scope>compile</scope>
+            <groupId>org.spongepowered</groupId>
+            <artifactId>spongeapi</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
     <repositories>
+        <repository>
+            <id>sponge-repo</id>
+            <url>http://repo.amigocraft.net/content/repositories/spongeapi/</url> <!-- Temporary! -->
+        </repository>
         <repository>
             <id>turt2live-repo</id>
             <url>http://repo.turt2live.com</url>
@@ -87,6 +94,34 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>com.google.code.maven-replacer-plugin</groupId>
+                <artifactId>maven-replacer-plugin</artifactId>
+                <version>1.3.8</version>
+                <executions>
+                    <execution>
+                        <phase>process-sources</phase>
+                        <goals>
+                            <goal>replace</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <file>src/main/templates/VersionInfo.java</file>
+                    <outputFile>src/main/java/com/turt2live/antishare/sponge/VersionInfo.java</outputFile>
+                    <replacements>
+                        <replacement>
+                            <token>maven-version-number</token>
+                            <value>${project.version}</value>
+                        </replacement>
+                        <replacement>
+                            <token>jenkins-build-number</token>
+                            <value>${BUILD_NUMBER}</value>
+                        </replacement>
+                    </replacements>
+                </configuration>
             </plugin>
 
             <plugin>
