--- a/Glowstone/AntiShare/pom.xml
+++ b/Glowstone/AntiShare/pom.xml
@@ -35,7 +35,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!-- Used by replacement plugin to inject build number -->
-        <BUILD_NUMBER>local</BUILD_NUMBER>
+        <jenkins.build.number>local</jenkins.build.number>
     </properties>
 
     <dependencies>
@@ -58,6 +58,10 @@
     </dependencies>
 
     <repositories>
+        <repository>
+            <id>glowstone-repo</id>
+            <url>http://repo.glowstone.net/content/repositories/public</url>
+        </repository>
         <repository>
             <id>turt2live-repo</id>
             <url>http://repo.turt2live.com</url>
