--- a/Sponge/AntiShare/pom.xml
+++ b/Sponge/AntiShare/pom.xml
@@ -32,6 +32,7 @@
     <version>${plugin.version}</version>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
@@ -112,7 +113,7 @@
                         </replacement>
                         <replacement>
                             <token>jenkins-build-number</token>
-                            <value>${BUILD_NUMBER}</value>
+                            <value>${jenkins.build.number}</value>
                         </replacement>
                     </replacements>
                 </configuration>
