--- a/pom.xml
+++ b/pom.xml
@@ -28,9 +28,8 @@
 
     <properties>
         <plugin.version>5.5.3-SNAPSHOT</plugin.version>
-
-        <!-- Used by replacement plugin to inject build number -->
-        <BUILD_NUMBER>local</BUILD_NUMBER>
+        <jenkins.build.number>local</jenkins.build.number>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <modules>
