--- a/Bukkit/AbstractImpl/Abstraction-v1_5_R2/pom.xml
+++ b/Bukkit/AbstractImpl/Abstraction-v1_5_R2/pom.xml
@@ -52,7 +52,7 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.5.1-R0.1-SNAPSHOT</version>
+            <version>1.5.2-R0.1</version>
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
