--- a/Bukkit/AbstractImpl/Abstraction-v1_6_R1/pom.xml
+++ b/Bukkit/AbstractImpl/Abstraction-v1_6_R1/pom.xml
@@ -52,7 +52,8 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.6.1-R0.1-SNAPSHOT</version>
+            <version>1.6.2-R0.1</version>
+            <!-- Incorrect version: No longer published! Was 1.6.1-R0.1-SNAPSHOT -->
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
