--- a/DevTools/BukkitPlugin/pom.xml
+++ b/DevTools/BukkitPlugin/pom.xml
@@ -51,8 +51,8 @@
         <!-- Bukkit -->
         <dependency>
             <groupId>org.bukkit</groupId>
-            <artifactId>craftbukkit</artifactId>
-            <version>1.7.9-R0.2-SNAPSHOT</version>
+            <artifactId>bukkit</artifactId>
+            <version>1.7.9-R0.2</version>
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
